src/rabbitmq/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${RABBITMQ_APP_NAME}
spec:
  serviceName: "not-applicable"
  selector:
    matchLabels:
      app: ${RABBITMQ_APP_NAME}
  template:
    metadata:
      labels:
        app: ${RABBITMQ_APP_NAME}
    spec:
      containers:
        - name: ${RABBITMQ_APP_NAME}
          image: rabbitmq:3-management
          ports:
            - name: http
              protocol: TCP
              containerPort: ${PORT_HTTP}
            - name: amqp
              protocol: TCP
              containerPort: ${PORT_AMQP}
          volumeMounts:
            - mountPath: /var/lib/{RABBITMQ_APP_NAME}
              name: ${RABBITMQ_APP_NAME}-volume
      volumes:
        - name: ${RABBITMQ_APP_NAME}-volume
          persistentVolumeClaim:
            claimName: ${RABBITMQ_APP_NAME}-pvc
