src/rabbitmq/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${RABBITMQ_APP_NAME}
spec:
  selector:
    app: ${RABBITMQ_APP_NAME}
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: ${PORT_HTTP}
      targetPort: ${PORT_HTTP}
    - name: amqp
      protocol: TCP
      port: ${PORT_AMQP}
      targetPort: ${PORT_AMQP}
