src/rabbitmq/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${RABBITMQ_APP_NAME}-ingress
spec:
  rules:
    - host: rabbitmq-manager.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${RABBITMQ_APP_NAME}
                port:
                  number: ${PORT_HTTP}
